# rag-chatbot

./: .env.example  app.py  chainlit.md  cli.py  config.py  notebook.ipynb  openai_utils.py  pinecone_utils.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
notebook/: notebook.ipynb
